# mastery

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTEXT.md  PLAN_MAESTRO.md  README.md  docker-compose.yml  mastery-chat-2026-05-05_09-31-14.md  package.json  pnpm-lock.yaml  skills-lock.json  turbo.json
apps/api/: .dockerignore  Dockerfile  README.md  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_init_ohlcv_hypertable.py  002_journal_and_backtests.py  003_alerts.py  004_betterauth.py  005_setup_lifecycle.py  006_winrate_index.py  007_backtest_trades.py  008_invalidation_conditions.py  009_trade_reviews.py  010_setup_thesis_narrative.py  011_factor_snapshot.py  012_setup_post_mortems.py  013_factor_outcomes.py  014_trigger_kinds_closed.py  015_postmortem_cleanup.py  016_setup_risk_state.py  017_paper_fills.py  018_scout_triggers.py  019_user_notification_settings.py  020_scout_proposal_source.py  021_unique_approval_events.py  022_unique_telegram_chat_id.py  023_user_id_scoping.py  024_paper_trading_engine.py  025_postmortem_drop_summary_es.py  026_liquidation_engine.py  027_market_trades.py  028_provider_weights_relax_floor.py  029_llm_usage_log.py  030_review_trigger_manual_request.py
apps/api/app/: config.py  db.py  main.py
apps/api/app/agent/: _validator_utils.py  agent.py  cost.py  deps.py  models.py  post_mortem_agent.py  post_mortem_validators.py  review_agent.py  routes.py  system_prompt.py  trader_profile.json  validators.py
apps/api/app/agent/tools/: _envelope.py  _time.py  basis.py  biases.py  confluence.py  correlation.py  cpcv.py  create_alert.py  delete_alert.py  dominance.py  factor_stats.py  indicators.py  journal_query.py  list_alerts.py  log_trade.py  ohlcv.py  perps_data.py  perps_dynamics.py  run_backtest.py  similar_setups.py  strategy_metrics.py  structure.py  volume_profile.py  walk_forward.py
apps/api/app/alerts/: __init__.py  cooldown.py  dsl.py  evaluator.py  panel_service.py  routes.py  runtime.py
apps/api/app/api/: alerts.py  backtests.py  chat.py  health.py  journal.py  metrics.py  notifications.py  ohlcv.py  setups.py  strategies.py  ws.py
apps/api/app/auth/: __init__.py  session.py
apps/api/app/backtest/: __init__.py  cpcv.py  factor_stats_repo.py  metrics.py  routes_backtests.py  routes_strategies.py  runner.py  walk_forward.py
apps/api/app/backtest/strategies/: __init__.py  bollinger_reversion.py  ema_cross.py
apps/api/app/broadcasting/: pubsub.py
apps/api/app/core/: config.py  db.py  time.py
apps/api/app/core/auth/: __init__.py  session.py
apps/api/app/data/: binance_adapter.py  exchange_context.py  normalizer.py  spot_adapter.py
apps/api/app/dominance/: provider.py
apps/api/app/indicators/: __init__.py  core.py  momentum.py  panel.py  trend.py
apps/api/app/ingestion/: backfill.py  live_klines.py
apps/api/app/journal/: __init__.py  bias_detector.py  embeddings.py  repo.py  routes.py  summary.py
apps/api/app/liquidation/: cache.py  calibration.py  factor_snapshot.py  models.py  repo.py  routes.py  scheduler.py  service.py  telegram_handlers.py  tool.py
apps/api/app/market/: ws_routes.py
apps/api/app/notifications/: bind.py  repo.py  routes.py  telegram.py
apps/api/app/paper_trading/: __init__.py  engine.py  positions.py  repo.py
apps/api/app/platform_routes/: health.py
apps/api/app/post_mortem/: agent.py  dispatcher.py  repo.py  system_prompt.py  validators.py
apps/api/app/reviewer/: agent.py  dispatcher.py  repo.py  system_prompt.py  validators.py
apps/api/app/risk/: __init__.py  gates.py  policy.py  state.py
apps/api/app/runtime/: post_mortem_dispatcher.py  review_dispatcher.py  risk_manager.py  scout_dispatcher.py  setup_runtime.py
apps/api/app/setups/: events.py  repo.py  risk_manager.py  routes.py  runtime.py  scout_agent.py  scout_dispatcher.py
apps/api/app/storage/: journal_repo.py  notification_repo.py  ohlcv_repo.py  post_mortem_repo.py  setup_repo.py
apps/api/scripts/: backfill_f1.py  backfill_factor_snapshots.py  embed_backfill.py  import_journal.py  migrate_me_to.py
apps/api/tests/agent/: test_basis.py  test_cost.py  test_dominance_provider.py  test_factor_gate.py  test_invalidation_conditions_validation.py  test_perps_dynamics.py  test_post_mortem_validators.py  test_review_models.py  test_review_system_prompt.py  test_review_validators.py  test_similar_setups.py  test_slippage_buffer.py  test_stop_loss_rename.py  test_validators_citation_rigor.py
apps/api/tests/alerts/: test_dsl.py  test_evaluator.py  test_panel_service.py
apps/api/tests/backtest/: conftest.py  test_metrics.py  test_no_lookahead.py  test_runner.py  test_strategies.py
apps/api/tests/core/: test_auth_session.py
apps/api/tests/fixtures/: sample_trades.csv
apps/api/tests/indicators/: conftest.py  test_core.py  test_momentum.py  test_no_lookahead.py  test_panel.py  test_trend.py  test_volume.py
apps/api/tests/integration/: test_scout_smoke.py
apps/api/tests/journal/: test_bias_detector.py  test_summary.py
apps/api/tests/liquidation/: conftest.py  test_calibration.py  test_factor_snapshot.py  test_models.py  test_routes.py  test_service.py  test_telegram_handlers.py  test_tool.py
apps/api/tests/notifications/: test_telegram_format.py
apps/api/tests/observability/: test_metrics.py
apps/api/tests/paper/: test_engine.py  test_positions.py
apps/api/tests/post_mortem/: test_dispatcher_helpers.py
apps/api/tests/risk/: test_gates.py
apps/api/tests/runtime/: test_review_cost.py  test_review_observability.py  test_review_prompt_thesis.py  test_review_scheduler.py  test_risk_manager.py  test_scout_approval_gate.py  test_setup_runtime_conditions.py
apps/api/tests/setups/: test_auto_approve.py  test_scout_agent.py  test_scout_risk_gates.py
apps/api/tests/storage/: test_cooldown.py  test_factor_stats_bayesian.py  test_factor_stats_lessons.py  test_holdout_split.py  test_journal_repo_postmortem_join.py  test_recurring_lessons.py
apps/web/lib/: ws.ts  (+15 more)
(+272 files in other folders)
