[project]
name = "trading-api"
version = "0.0.0"
description = "Trading Copilot — backend (FastAPI + Pydantic AI + CCXT)"
requires-python = ">=3.13"
readme = "README.md"

dependencies = [
  # Web framework
  "fastapi>=0.136.0",
  "uvicorn[standard]>=0.32.1",
  # Validation + settings
  "pydantic>=2.13.0",
  "pydantic-settings>=2.7.0",
  # Database — async
  "sqlalchemy[asyncio]>=2.0.36",
  "asyncpg>=0.30.0",
  "alembic>=1.14.0",
  # Cache + pub/sub. We use redis-py against Valkey (100% wire-protocol compatible).
  # valkey-glide is the AWS-native client but its async pub/sub API is heavier; redis-py
  # is a drop-in for now. Re-evaluate in F3 if we hit pub/sub throughput limits.
  "redis>=6.0.0",
  # Exchange data — CCXT 4.4+ ships CCXT Pro (WebSocket support) for free.
  "ccxt>=4.4.0",
  # Performance helpers used across the codebase
  "polars>=1.18.0",
  "orjson>=3.10.12",
  # Logging
  "structlog>=25.1.0",
  # Cmdline tooling
  "typer>=0.15.1",
  # LLM agent (F1+). pydantic-ai-slim with extras keeps the dep tree small;
  # we don't pull OpenAI/Gemini providers we won't use.
  "pydantic-ai-slim[openrouter,vercel-ai]>=1.89.0",
  # Journal embeddings (F2): voyage-4-large via the official SDK.
  "voyageai>=0.3.4",
  # Backtesting (F2 Chunk 2) — OSS-only stack. The decision NOT to buy
  # VectorBT PRO is captured in the plan file: research speed isn't the
  # bottleneck for our use case. skfolio gives us CombinatorialPurgedCV;
  # DSR / PSR / PBO are implemented directly from Bailey & López de Prado
  # (paper "The Deflated Sharpe Ratio" 2014, "PBO" 2016) in
  # app/backtest/metrics.py — pypbo is a GitHub-only package that we'd have
  # to vendor anyway, and the formulas are ~80 LoC of numpy.
  "skfolio>=0.15.0",
  "prometheus-client>=0.25.0",
]

[dependency-groups]
dev = [
  "ruff>=0.8.4",
  "mypy>=1.14.0",
  "pytest>=8.3.4",
  "pytest-asyncio>=0.25.0",
  "pytest-cov>=6.0.0",
  "httpx>=0.28.1", # for FastAPI test client
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
package = true

# -----------------------------------------------------------------------------
# Linters / type checkers
# -----------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
  "E",    # pycodestyle
  "W",    # pycodestyle
  "F",    # pyflakes
  "I",    # isort
  "B",    # flake8-bugbear
  "UP",   # pyupgrade
  "SIM",  # simplify
  "RUF",  # ruff-specific
  "ASYNC",
]
ignore = [
  "E501", # line length handled by formatter
  # `l` (lowercase L) is the canonical name for the LOW field in an OHLCV bar
  # across every finance API and library (Binance, CCXT, polars-ta, TA-Lib, ...).
  # Renaming would diverge from the entire ecosystem.
  "E741",
  # Docstrings in indicator/quant code use Greek letters (α, β, σ) and math
  # operators (·, −, ×, ≤, ≥) that ruff flags as "ambiguous unicode". Forcing
  # ASCII would make formulas unreadable.
  "RUF002", # ambiguous unicode in docstring
  "RUF003", # ambiguous unicode in comment
]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]
disallow_untyped_decorators = false # FastAPI decorators

[[tool.mypy.overrides]]
# CCXT does not ship type stubs.
module = "ccxt.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# redis-py async pubsub return types are loose; we cast at call sites.
module = "redis.*"
ignore_missing_imports = false
disallow_untyped_calls = false

[[tool.mypy.overrides]]
# skfolio + pandas don't ship usable stubs for our usage.
module = ["skfolio.*", "pandas.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# asyncpg (raw connection used for LISTEN/NOTIFY in alerts.runtime).
module = "asyncpg.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
